added postcss config to starter template.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "postcss-preset-env": "^9.3.0",
     "sass": "^1.69.5",
     "vite": "^5.0.0",
     "vite-plugin-purgecss": "^0.2.12"
